# webcam_tui

./: Cargo.toml  README.md
src/: camera.rs  main.rs
