[package]
name = "tui_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
opencv = {version = "0.89.0", features = ["clang-runtime"]}
ratatui = "0.23.0"
v4l = {version = "0.14.0"}
